@@ -5,6 +5,8 @@
 	* server.c, server.h: added function ClearConfig which memsets
 	the serverConfig_t config to 0 (closes #226).
 	* lmtpd.c, imapd.c, pop3d.c: added calls to ClearConfig.
+	* pgsql/dbpgsql.c: added some code to db_check_connection to throw
+	a separate error if called before db_connect (related to #221).
 
 2005-07-16  Aaron Stone <aaron@serendipity.cx>
 
